[W-13020917] better release notes logic fix + letter spacing adjustment (#375)

--- a/src/css/specific/nav.css
+++ b/src/css/specific/nav.css
@@ -104,8 +104,9 @@
 .nav-group > .nav-list > .nav-item > .nav-text {
   &:hover {
     color: var(--steel-3);
+    font-family: var(--sans-serif-bold);
     font-weight: var(--weight-bold);
-    letter-spacing: -.03em;
+    letter-spacing: -.01em;
   }
   &:hover svg {
     filter: grayscale(0);
@@ -323,8 +324,9 @@ svg.nav-icon {
   z-index: var(--z-nav);
 
   &.is-active {
+    font-family: var(--sans-serif-bold);
     font-weight: var(--weight-bold);
-    letter-spacing: -.03em;
+    letter-spacing: -.01em;
     opacity: 1;
     pointer-events: auto;
     transform: scale(1) translate3d(0,0,0);
@@ -367,8 +369,9 @@ svg.nav-icon {
 
     &:hover {
       background: var(--aluminum-2);
+      font-family: var(--sans-serif-bold);
       font-weight: var(--weight-bold);
-      letter-spacing: -.03em;
+      letter-spacing: -.01em;
     }
 
     &:active,
