--- a/src/css/specific/toc.css
+++ b/src/css/specific/toc.css
@@ -36,8 +36,9 @@
   &:hover {
     border-left-color: var(--steel-2);
     color: var(--steel-2);
+    font-family: var(--sans-serif-bold);
     font-weight: var(--weight-bold);
-    letter-spacing: -.03em;
+    letter-spacing: -.01em;
   }
 
   &:focus {
